<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back24"
                tools:ignore="ContentDescription"
                app:tint="@color/black" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="50dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="15dp"
                    android:text="@string/signup_des" />

            </LinearLayout>

            <EditText
                android:id="@+id/editText_full_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/hint_fullname"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/hint_username_register"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/hint_password_register"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/editText_repass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/hint_confirmpassword_register"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/base"
                android:text="@string/button_register"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
