<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity"
        tools:ignore="RedundantNamespace">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/sign_in"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:text="@string/signin_des"/>
            </LinearLayout>

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"
                android:padding="10dp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/base"
                android:text="@string/button_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/textview_asforanaccount"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_move_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview_register"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/base"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Không cần đăng nhập"
                android:textSize="14sp"
                android:textColor="@color/base"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
